# gram_crm

./: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.dev.yml  docker-compose.ngrok.yml  docker-compose.yml  pyproject.toml  webhook.pem
apps/broadcasts/: admin.py  models.py  services.py  tasks.py
apps/clients/: apps.py  models.py  services.py  tasks.py
apps/common/: admin.py  utils.py  views.py
apps/crm/: admin.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
apps/docs/: urls.py  views.py
apps/invites/: admin.py  models.py  services.py
apps/referrals/: admin.py  models.py  services.py
apps/stats/: admin.py  models.py  services.py  tasks.py  views.py
apps/telegram_bot/: admin_keyboards.py  bot.py  callbacks.py  keyboards.py  middleware.py  permissions.py  router.py  services.py  states.py  subscription.py  webhook.py
apps/users/: admin.py  models.py  services.py
apps/withdrawals/: admin.py  models.py  services.py
config/: celery.py  storage_backends.py  urls.py
config/settings/: base.py  dev.py  prod.py
docs/: bot_guide.md  dev_log.md  django_admin_guide.md
nginx/: default.conf  prod-init.conf  prod.conf
scripts/: dev_down.sh  dev_up.sh  entrypoint.sh  ngrok_domain.sh  prod_down.sh  prod_up.sh  wait_for_http.sh
templates/: landing.html  stats_clients.html  stats_dashboard.html
templates/crm/: 403.html  base.html  dashboard.html  day_detail.html  entry_applications.html  entry_finance.html  history.html  login.html  no_workspace.html  report_detail.html
templates/docs/: base.html  crm.html  faq.html  (+5 more)
(+53 files in other folders)
